--- a/src/main.css
+++ b/src/main.css
@@ -2,34 +2,28 @@
 	display: grid;
 	gap: 8px;
 
-	> * {
+	> :where(figure) {
 		width: 100%;
 		height: 100%;
 		margin: 0;
 		border-radius: var(--image-border-radius, var(--border-radius, 0));
 		overflow: hidden;
 
-		div {
+		.components-resizable-box__container {
 			width: 100% !important;
 			height: 100% !important;
 			max-width: unset !important;
 			max-height: unset !important;
 		}
 
-		img {
+		img,
+		video {
 			display: block !important;
 			width: 100% !important;
 			height: 100% !important;
 			object-position: var(--object-position, 50% 50%) !important;
+			object-fit: cover;
 		}
-	}
-
-	img,
-	video {
-		display: block;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
 	}
 
 	/**
