--- a/src/editor-styles.css
+++ b/src/editor-styles.css
@@ -33,4 +33,57 @@
 		}
 	}
 
+	/* Hide extra images when hide-extra-in-editor class is present */
+	&.hide-extra-in-editor {
+		/* For each maxVisible value, hide blocks beyond that count */
+		/* Target inner blocks - using multiple possible selectors for compatibility */
+		&.has-visible-1 {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 2),
+			> *:nth-child(n + 2) {
+				display: none;
+			}
+		}
+		&.has-visible-2 {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 3),
+			> *:nth-child(n + 3) {
+				display: none;
+			}
+		}
+		&.has-visible-3 {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 4),
+			> *:nth-child(n + 4) {
+				display: none;
+			}
+		}
+		&.has-visible-4 {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 5),
+			> *:nth-child(n + 5) {
+				display: none;
+			}
+		}
+		&.has-visible-5 {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 6),
+			> *:nth-child(n + 6) {
+				display: none;
+			}
+		}
+		&.has-visible-6 {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 7),
+			> *:nth-child(n + 7) {
+				display: none;
+			}
+		}
+		&.has-visible-7 {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 8),
+			> *:nth-child(n + 8) {
+				display: none;
+			}
+		}
+		&.has-visible-8 {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 9),
+			> *:nth-child(n + 9) {
+				display: none;
+			}
+		}
+	}
 }
