--- a/src/editor-styles.css
+++ b/src/editor-styles.css
@@ -35,57 +35,72 @@
 		}
 	}
 
-	/* Hide extra images when hide-extra-in-editor class is present */
-	&.hide-extra-in-editor {
+	/* Hide extra images when data-hide-extra attribute is present */
+	&[data-hide-extra] {
 		/* For each maxVisible value, hide blocks beyond that count */
 		/* Target inner blocks - using multiple possible selectors for compatibility */
 		&[data-visible="1"] {
-			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 2),
-			> *:nth-child(n + 2) {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 2):not(.wp-block-mai-grid-gallery__badge),
+			> *:nth-child(n + 2):not(.wp-block-mai-grid-gallery__badge) {
 				display: none;
 			}
 		}
 		&[data-visible="2"] {
-			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 3),
-			> *:nth-child(n + 3) {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 3):not(.wp-block-mai-grid-gallery__badge),
+			> *:nth-child(n + 3):not(.wp-block-mai-grid-gallery__badge) {
 				display: none;
 			}
 		}
 		&[data-visible="3"] {
-			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 4),
-			> *:nth-child(n + 4) {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 4):not(.wp-block-mai-grid-gallery__badge),
+			> *:nth-child(n + 4):not(.wp-block-mai-grid-gallery__badge) {
 				display: none;
 			}
 		}
 		&[data-visible="4"] {
-			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 5),
-			> *:nth-child(n + 5) {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 5):not(.wp-block-mai-grid-gallery__badge),
+			> *:nth-child(n + 5):not(.wp-block-mai-grid-gallery__badge) {
 				display: none;
 			}
 		}
 		&[data-visible="5"] {
-			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 6),
-			> *:nth-child(n + 6) {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 6):not(.wp-block-mai-grid-gallery__badge),
+			> *:nth-child(n + 6):not(.wp-block-mai-grid-gallery__badge) {
 				display: none;
 			}
 		}
 		&[data-visible="6"] {
-			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 7),
-			> *:nth-child(n + 7) {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 7):not(.wp-block-mai-grid-gallery__badge),
+			> *:nth-child(n + 7):not(.wp-block-mai-grid-gallery__badge) {
 				display: none;
 			}
 		}
 		&[data-visible="7"] {
-			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 8),
-			> *:nth-child(n + 8) {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 8):not(.wp-block-mai-grid-gallery__badge),
+			> *:nth-child(n + 8):not(.wp-block-mai-grid-gallery__badge) {
 				display: none;
 			}
 		}
 		&[data-visible="8"] {
-			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 9),
-			> *:nth-child(n + 9) {
+			.block-editor-inner-blocks .block-editor-block-list__layout > *:nth-child(n + 9):not(.wp-block-mai-grid-gallery__badge),
+			> *:nth-child(n + 9):not(.wp-block-mai-grid-gallery__badge) {
 				display: none;
 			}
 		}
 	}
+}
+
+.wp-block-mai-grid-gallery[data-count]::after {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	padding: 4px 8px;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: #fff;
+	font-size: 12px;
+	font-weight: 600;
+	border-top-right-radius: var(--mai-grid-gallery-border-radius, var(--image-border-radius, var(--border-radius, 0)));
+	content: '+ ' attr(data-count);
 }
