--- a/src/main.css
+++ b/src/main.css
@@ -194,10 +194,10 @@
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	display: flex;
+	display: flex !important;
 	align-items: center;
-	padding: 4px 8px;
-	background-color: rgba(0, 0, 0, 0.5);
+	padding: 4px;
+	background-color: rgba(0, 0, 0, 0.6);
 	color: #fff;
 	font-size: 12px;
 	font-weight: 600;
@@ -205,14 +205,14 @@
 }
 
 .wp-block-mai-grid-gallery__badge-icon {
+	flex-shrink: 0;
 	width: 16px;
 	height: 16px;
 	background-color: currentColor;
-	mask-image: var(--mai-grid-gallery-icon, url('data:image/svg+xml;charset=UTF-8,%3Csvg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"%3E%3Cpath stroke="none" d="M0 0h24v24H0z" fill="none"/%3E%3Cpath d="M5 7h1a2 2 0 0 0 2 -2a1 1 0 0 1 1 -1h6a1 1 0 0 1 1 1a2 2 0 0 0 2 2h1a2 2 0 0 1 2 2v9a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-9a2 2 0 0 1 2 -2" /%3E%3Cpath d="M9 13a3 3 0 1 0 6 0a3 3 0 0 0 -6 0" /%3E%3C/svg%3E'));
+	mask-image: var(--mai-grid-gallery-icon, url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M4 8v-2a2 2 0 0 1 2 -2h2' /%3E%3Cpath d='M4 16v2a2 2 0 0 0 2 2h2' /%3E%3Cpath d='M16 4h2a2 2 0 0 1 2 2v2' /%3E%3Cpath d='M16 20h2a2 2 0 0 0 2 -2v-2' /%3E%3Cpath d='M8 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0' /%3E%3Cpath d='M16 16l-2.5 -2.5' /%3E%3C/svg%3E"));
 	mask-size: contain;
 	mask-repeat: no-repeat;
 	mask-position: center;
-	flex-shrink: 0;
 }
 
 .wp-block-mai-grid-gallery__badge-count::before {
