--- a/src/main.css
+++ b/src/main.css
@@ -199,15 +199,16 @@
 	padding: 4px;
 	background-color: rgba(0, 0, 0, 0.6);
 	color: #fff;
-	font-size: 12px;
+	font-size: 1rem;
 	font-weight: 600;
+	line-height: 1;
 	border-top-right-radius: var(--mai-grid-gallery-border-radius, var(--image-border-radius, var(--border-radius, 0)));
 }
 
 .wp-block-mai-grid-gallery__badge-icon {
 	flex-shrink: 0;
-	width: 16px;
-	height: 16px;
+	width: 1rem;
+	height: 1rem;
 	background-color: currentColor;
 	mask-image: var(--mai-grid-gallery-icon, url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M4 8v-2a2 2 0 0 1 2 -2h2' /%3E%3Cpath d='M4 16v2a2 2 0 0 0 2 2h2' /%3E%3Cpath d='M16 4h2a2 2 0 0 1 2 2v2' /%3E%3Cpath d='M16 20h2a2 2 0 0 0 2 -2v-2' /%3E%3Cpath d='M8 11a3 3 0 1 0 6 0a3 3 0 0 0 -6 0' /%3E%3Cpath d='M16 16l-2.5 -2.5' /%3E%3C/svg%3E"));
 	mask-size: contain;
